--- a/step2.html
+++ b/step2.html
@@ -32,7 +32,7 @@
 			else
 			{
 				getElementById('next').innerHTML="查看你的信息。";
-				getElementById('next').href="http://www.baidu.com/?wd="+aa;   //这个值为了安全性，应该由服务器返回，如Json
+				getElementById('next').href="http://www.baidu.com/s?wd="+aa;   //这个值为了安全性，应该由服务器返回，如Json
 				getElementById('b1').onclick="";   //这个值为了安全性，应该由服务器返回，如Json
 			}		
 		}
