--- a/step2.html
+++ b/step2.html
@@ -24,9 +24,9 @@
 		{
 			var aa=getElementById('answer1').value;
 			
-			if(aa !="ok"||aa=="")
+			if(aa=="")
 			{
-				alert('please inpu "ok"!');
+				alert('please inpu name!');
 				return;
 			}
 			else
