--- a/step1.html
+++ b/step1.html
@@ -31,9 +31,10 @@
 			}
 			else
 			{
-				getElementById('next').innerHTML="下一关";
-				getElementById('next').href="http://htmlpreview.github.io/?https://github.com/Silent2013/HTTP/blob/master/step2.html";   //这个值为了安全性，应该由服务器返回，如Json
-				getElementById('b1').onclick="";   //这个值为了安全性，应该由服务器返回，如Json
+				//getElementById('next').innerHTML="下一关";
+				//getElementById('next').href="http://htmlpreview.github.io/?https://github.com/Silent2013/HTTP/blob/master/step2.html";   //这个值为了安全性，应该由服务器返回，如Json
+				//getElementById('b1').onclick="";   //这个值为了安全性，应该由服务器返回，如Json
+				location.assign('http://htmlpreview.github.io/?https://github.com/Silent2013/HTTP/blob/master/step2.html');
 			}		
 		}
 	}
